css/main.css
body {
    background-color: #white;
    margin: 0;
    padding: 0;
    font-size: 100%;
    font-family: 'Inconsolata', sans-serif;
    color: #black;
}

a {
    text-decoration: none;
    color: rgb(31,119,185); # blue from 0
}

#header {
    text-align: center;
    width: 100%;
}

#logo {
    margin: 2em;
}

#top_menu {
    font-size: 1.25em;
    width: 100%;
    border-top: .2em solid black;
    border-bottom: .2em solid black;
    padding-top: .25em;
    padding-bottom: .25em;
}

#sub_body {
    margin-left: 4%;
    margin-right: 4%;
}

.first {
    margin-right: 4%;
}

.clear {
    clear: both;
}

h1, h2, h3 {
    font-weight: 800;
    padding-bottom: .1em;
    padding-top: 1em;
    margin: 0;
    color: rgb(31,119,185); # blue from 0
}

h1 {
    font-size: 2.5em;
}

.project_list {
    clear:both;
}

.project_card {
    float: left;
    background-color: black;
    width: 48%;
}

.project_thumb {
    width: 100%;
    margin: 0px;
    padding: 0px;
}

.project_abstract {
    padding: 4%;
    min-height: 5em;
    color: white;
    text-align: center;
}

.project_abstract h2 {
    font-size: 1.5em;
    font-weight: bold;
    padding: 0px;
    margin: 0px;
    margin-bottom: .75em;
}

.footer {
    _position: absolute;
    _bottom: 0px;
    clear: both;
    width: 95%;
    text-align: center;
    padding-top: 2em;
}

@media all and (max-width: 600px) {

    .project_card {
        width: 96%;
        margin-bottom: 2em;
    }

}

